welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: Missing closing brace `}' assumed here
def haveBaggle():Boolean = {
^Program:38: error: Missing closing brace `}' assumed here
    }
    ^