welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code

def haveBaggle():Boolean = {
    if (estSurBiscuit() == true) {
    	
        return true;
        /* interdit d'écrire du code ici */
    } else {
    		avance()
    		    if (estSurBiscuit() == true) {
    	
        return true;
	avance()
	    if (estSurBiscuit() == true) {
    	
        return true;
	avance()
	    if (estSurBiscuit() == true) {
    	
        return true;
	avance()
	    if (estSurBiscuit() == true) {
    	
        return true;
	avance()
	    if (estSurBiscuit() == true) {
    	
        return true;
	avance()
	    if (estSurBiscuit() == true) {
    	
        return true;
	avance()
	    if (estSurBiscuit() == true) {
    	
        return true;
        return false;
        /* pareil ici */
    }
    /* même ici, oubliez */
}


